--- a/src/board.css
+++ b/src/board.css
@@ -9,7 +9,7 @@
 }
 
 td {
-	border: 3px solid #555;
+	border: 3px solid #dff9fb;
 	width: 100px;
 	height: 100px;
 	text-align: center;
@@ -30,9 +30,13 @@ td.active:hover {
 }
 
 td[data-tile="0"] {
+	border-radius: 50%;
+	border: 3px solid white;
 	background-color: #eb4d4b !important;
 }
 td[data-tile="1"] {
+	border: 3px solid white;
+	border-radius: 50%;
 	background-color: #130f40 !important;
 }
 
